Finally fixing overflowing main-content issue

--- a/client/src/styles/Data.css
+++ b/client/src/styles/Data.css
@@ -45,7 +45,6 @@
 
 .map-container {
     flex: 999;
-    height: 45%;
     overflow: scroll;
 }
 
